--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "json-server --watch db.json -p 3001 -d 1000"
+    "start": "node server.js"
   },
+  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "lite-server": "^2.6.1"
-  }
+  "license": "ISC"
 }
